# bazel_kotlin_proto

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  maven_install.json
examples/simple/: BUILD.bazel  mymessage.proto
rules/: BUILD.bazel  kotlin_proto_library.bzl
